app/cert-manager/base/namespace.yaml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ data.values.certmanager.namespace
  metadata:
    labels:
      name: #@ data.values.certmanager.namespace
